2011-05-19 Richard Frith-Macdonald  <rfm@gnu.org>

	* GNUmakefile: Add FIFO
	* Performance.h: Add FIFO
	* GSFIFO.h: Add a FIFO class
	* GSFIFO.m: Add a FIFO class

2011-03-08 Richard Frith-Macdonald  <rfm@gnu.org>

	* GNUmakefile: Bump version number for next release.

2010-11-11 Riccardo Mottola

	* GSCache.m
	use always class_getInstanceSize() on GNUSTEP for all runtimes
	and define a compatibility macro for old macs

	* GSThreadPool.h
	* GSLinkedList.h
	* GSThreadPool.m
	* GSSkipMutableArray.m
	* GSIOThreadPool.h
	* GSIOThreadPool.m
	Complete includes and use typedef instead of #define
	
2010-11-11 Richard Frith-Macdonald  <rfm@gnu.org>

	* GSCache.m: Try to get defines right to get instance size depending
	on the runtime in use.

2010-11-10 Riccardo Mottola

	* GSLinkedList.h
	* GSSkipMutableArray.m
	* GSIOThreadPool.h
	Mac 10.4 compatibility definitions

2010-10-01 Richard Frith-Macdonald  <rfm@gnu.org>

	* GSIOThreadPool.h:
	* GSIOThreadPool.m:
	Add new methed class for pooling threads to handle I/O and timers.

2010-09-30 Richard Frith-Macdonald  <rfm@gnu.org>

	* GSThreadPool.h:
	* GSThreadPool.m:
	Add new methed to return a shared pool.

2010-09-29 Richard Frith-Macdonald  <rfm@gnu.org>

	* GSLinkedList.h:
	* GSLinkedList.m:
	Revise structure and API for greater flexibility.
	* GSThreadPool.h:
	* GSThreadPool.m:
	Modify for new linked list api.

2010-09-23 Richard Frith-Macdonald  <rfm@gnu.org>

	* performance/GSThreadPool.h:
	* performance/GSThreadPool.m:
	Track count of active threads and count of number of methods
	performed in the thread pool.  Display via -description.

2010-09-22 Richard Frith-Macdonald  <rfm@gnu.org>

	* GSLinkedList.h:
	* GSLinkedList.m: Simple doubly linked list implementation
	* GSThreadPool.h:
	* GSThreadPool.m: Lightweight thread pool implementation
	* Performance.h: Include new headers
	* GNUmakefile: Build/install new source
	Add classes for a simple linked list and for a lightweight thread 